--- a/source/project.config.json
+++ b/source/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.9",
-	"appid": "wxff23e3e96e8aa21a",
-	"projectname": "%E4%BA%91%E6%98%93%E5%88%9B%E4%BA%8C%E6%89%8B%E8%BD%A6",
+	"appid": "wxa5da6913bd0c5c6d",
+	"projectname": "%E4%BA%91%E6%98%93%E5%88%9B%E6%B1%BD%E8%BD%A6%E6%9C%8D%E5%8A%A1%E5%B9%B3%E5%8F%B0",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
